--- a/hm11_rpt01/hm11_sitelist.html
+++ b/hm11_rpt01/hm11_sitelist.html
@@ -19,13 +19,13 @@
 				<a href="hm11_info.html" target="right">My Info.</a> <br>
                 <!--hmxx_info.html-->
 			<li>
-				<a href="hm11_day.html" target="_self">My daily life</a> <br>
+				<a href="hm11_day.html" target="right">My daily life</a> <br>
                 <!--hmxx_day.html-->
 			<li>
 				<a href="hm11_best3.html" target="right">Best 3 drama</a> <br>
                 <!--hmxx_best3_song.html-->
 			<li>
-				<a href="hm11_travel3.html" target="_top">여행가고 싶은 나라 3</a> <br>
+				<a href="hm11_travel3.html" target="right">여행가고 싶은 나라 3</a> <br>
                 <!--hmxx_best3_country.html-->
 			<li>
 				<a href="https://github.com/redwoods/html5" target="_blank">HTML5 강의홈피</a>
