--- a/hm11_rpt01/hm11_best3.html
+++ b/hm11_rpt01/hm11_best3.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <!--이 부분은 주석문입니다. 웹 브라우저는 주석을 화면에 출력하지 않습니다.-->
 <html>
-	<head>
-		<!-- 문서제목, 자바스크립트 코드, CSS 스타일 정의, 메타데이터정의 -->
-		<meta charset="utf-8">
-		<title>hm11 : best3 drama</title>
-		<style>
-		</style>
-		<script></script>
-	</head>
+  <head>
+    <!-- 문서제목, 자바스크립트 코드, CSS 스타일 정의, 메타데이터정의 -->
+    <meta charset="utf-8" />
+    <title>hm11 : best3 drama</title>
+    <style></style>
+    <script></script>
+  </head>
 
-	<body>
-		<h3>best 3 drama</h3>
-		<hr>
-        <ul>
-			<li>
-                <a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EC%82%AC%EB%82%B4%EB%A7%9E%EC%84%A0&oquery=%EC%8A%A4%EB%AC%BC%EB%8B%A4%EC%84%AF+%EC%8A%A4%EB%AC%BC%ED%95%98%EB%82%98&tqi=hBrvudprvTossZK50t4ssssstj0-303834"> <img src="media/사내맞선.jpg" width="100" height="100">사내맞선 </a>
-            </li>
-            <li>
-                <a href="https://search.naver.com/search.naver?sm=tab_sug.top&where=nexearch&query=%EC%8A%A4%EB%AC%BC%EB%8B%A4%EC%84%AF+%EC%8A%A4%EB%AC%BC%ED%95%98%EB%82%98&oquery=%EA%B8%B0%EC%83%81%EC%B2%AD%EC%82%AC%EB%9E%8C%EB%93%A4&tqi=hBruLwprvTossvW8cisssssssuV-142717&acq=%EC%8A%A4%EB%AC%BC%EB%8B%A4%EC%84%AF+&acr=1&qdt=0"> <img src="media/스물다섯스물하나.jpg" width="100" height="100">스물다섯스물하나 </a>
-            </li>
-                <li>
-                    <a href="https://search.naver.com/search.naver?where=nexearch&sm=top_sug.pre&fbm=0&acr=1&acq=%EA%B8%B0%EC%83%81%EC%B2%AD&qdt=0&ie=utf8&query=%EA%B8%B0%EC%83%81%EC%B2%AD%EC%82%AC%EB%9E%8C%EB%93%A4m"> <img src="media/기상청사람들.jpg" width="100" height="100">기상청사람들 </a>
-                </li>
-		
-		</ul>
-	</body>
-
+  <body>
+    <h3>best 3 drama</h3>
+    <hr />
+    <ul>
+      <li>
+        <a
+          href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EC%82%AC%EB%82%B4%EB%A7%9E%EC%84%A0&oquery=%EC%8A%A4%EB%AC%BC%EB%8B%A4%EC%84%AF+%EC%8A%A4%EB%AC%BC%ED%95%98%EB%82%98&tqi=hBrvudprvTossZK50t4ssssstj0-303834"
+        >
+          <img src="media/사내맞선.jpg" width="100" height="100" />사내맞선
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://search.naver.com/search.naver?sm=tab_sug.top&where=nexearch&query=%EC%8A%A4%EB%AC%BC%EB%8B%A4%EC%84%AF+%EC%8A%A4%EB%AC%BC%ED%95%98%EB%82%98&oquery=%EA%B8%B0%EC%83%81%EC%B2%AD%EC%82%AC%EB%9E%8C%EB%93%A4&tqi=hBruLwprvTossvW8cisssssssuV-142717&acq=%EC%8A%A4%EB%AC%BC%EB%8B%A4%EC%84%AF+&acr=1&qdt=0"
+        >
+          <img
+            src="media/스물다섯스물하나.jpg"
+            width="100"
+            height="100"
+          />스물다섯스물하나
+        </a>
+      </li>
+      <li>
+        <a
+          href="https://search.naver.com/search.naver?where=nexearch&sm=top_sug.pre&fbm=0&acr=1&acq=%EA%B8%B0%EC%83%81%EC%B2%AD&qdt=0&ie=utf8&query=%EA%B8%B0%EC%83%81%EC%B2%AD%EC%82%AC%EB%9E%8C%EB%93%A4"
+        >
+          <img src="media/기상청사람들.jpg" width="100" height="100"/>기상청사람들</a>
+      </li>
+    </ul>
+  </body>
 </html>
-
