--- a/hm11_rpt01/hm11_travel3.html
+++ b/hm11_rpt01/hm11_travel3.html
@@ -15,7 +15,7 @@
 		<hr>
         <ul>
 			<li>
-                <a href="https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=0&ie=utf8&query=%ED%94%84%EB%9E%91%EC%8A%A4"> <img src="media/프랑스.jpg" width="100" height="100">프랑스 </a>
+                <a href="https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=0&ie=utf8&query=%ED%94%84%EB%9E%91%EC%8A%A4"> <img src="media/프랑스.jpg" width="100" height="100">프랑스 -> </a>
             </li>
             <li>
                 <a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EC%8A%A4%ED%8E%98%EC%9D%B8&oquery=%ED%94%84%EB%9E%91%EC%8A%A4&tqi=hBr5qsp0J1sssQzyQ2KssssssrK-057153"> <img src="media/스페인.jpg" width="100" height="100">스페인 </a>
@@ -28,4 +28,3 @@
 	</body>
 
 </html>
-
