--- a/hm11_rpt01/hm11_travel3.html
+++ b/hm11_rpt01/hm11_travel3.html
@@ -15,16 +15,17 @@
 		<hr>
         <ul>
 			<li>
-                <a href="https://search.naver.com/search.naver?where=nexearch&sm=top_hty&fbm=0&ie=utf8&query=%ED%94%84%EB%9E%91%EC%8A%A4"> <img src="media/프랑스.jpg" width="100" height="100">프랑스 -> </a>
+                <a href="https://www.youtube.com/watch?v=kBQPQdP_10U4" > <img src="media/프랑스.jpg" width="100" height="100">프랑스 </a>
             </li>
             <li>
-                <a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EC%8A%A4%ED%8E%98%EC%9D%B8&oquery=%ED%94%84%EB%9E%91%EC%8A%A4&tqi=hBr5qsp0J1sssQzyQ2KssssssrK-057153"> <img src="media/스페인.jpg" width="100" height="100">스페인 </a>
+                <a href="https://www.youtube.com/watch?v=0z5aovsMiC0" > <img src="media/스페인.jpg" width="100" height="100">스페인 </a>
             </li>
                 <li>
-                    <a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EC%BA%90%EB%82%98%EB%8B%A4&oquery=%EC%8A%A4%ED%8E%98%EC%9D%B8&tqi=hBr52sp0J1sssQYP7Ewssssss6R-443343"> <img src="media/캐나다.jpg" width="100" height="100">캐나다 </a>
+                    <a href="https://www.youtube.com/watch?v=d4fZvT8JSfg"> <img src="media/캐나다.jpg" width="100" height="100">캐나다 </a>
                 </li>
 		
 		</ul>
 	</body>
 
 </html>
+
