--- a/hm11_rpt01/hm11_rpt01.html
+++ b/hm11_rpt01/hm11_rpt01.html
@@ -14,10 +14,11 @@
 		<!-- 문서의 본문 텍스트, 이미지, 테이블, 자바스크립트 코드, 동영상 등 -->
 		<h2>나는 누구?</h2>
 		<hr>
-		<iframe src="hm11_sitelist.html" name="left" width="220" height="600"></iframe>
-		<iframe src="https://www.youtube.com/watch?v=C9JnQa42xhM" name="right" width="800" height="600"></iframe>
+		<iframe src="hm11_sitelist.html" name="left" width="200" height="900"></iframe>
+		<iframe src="media/스펀지밥.png" name="right" width="1100" height="900"></iframe>
 	
 	    <hr>
 	</body>
 
 </html>
+
