--- a/hm11_card/christmas card.html
+++ b/hm11_card/christmas card.html
@@ -4,48 +4,78 @@
 	<head>
 		<!-- 문서제목, 자바스크립트 코드, CSS 스타일 정의, 메타데이터정의 -->
 		<meta charset="utf-8">
-		<title>hm04 X-MAS카드</title>
+		<title>hm11 X-MAS카드</title>
 		<style>
+
+	@keyframes santa {
+    from{margin-left: 0%;}
+    to{margin-left:  900%;}   
+	}
+
+	@keyframes rudolf {
+    from{margin-left: 500%;}
+    to{margin-left:  0%;}   
+
+	
+}
+		#rudolf{
+			position: absolute;
+			left:400px;
+			top:300px;
+			animation: rudolf; 
+			animation-duration: 3s;
+			animation-iteration-count: infinite;
+			animation-direction: alternate;
+		}
+	
 
         div {
         display : inline-block;
         padding : 5px;
         color : white;
-        background : red;
-        }
+    	 }
 
-        div#scale { transform : scale(3,1);}
-        div#scale:hover { transform : scale(4,2);}
-        div#scale:active { transform : scale(1,5);}
-
-
+		 #santa{
+		position: absolute;
+		left: 100%;
+		right: 30%;
+		top: 150%;
+		animation: santa; 
+		animation-duration: 3s;
+		animation-iteration-count: infinite;
+		animation-direction: alternate;
+	}
 
 			#music {
-				position: fixed;
-				top: 460px;
-				left: 10px;
+				position: fixed; 
+				top: 680px;
+				left: 40px;
 			}
             #hm11{
 				position: fixed;
-				top: 380px;
-				left: 300px;
+				top: 700px;
+				left: 570px;
 				background:rgb(202, 181, 241);
 				color: green;
 			}
 			#te {
+				background: skyblue;
+				padding: 20px;
+				border: 5px dotted white;
+				margin: 30px;
 				position: absolute;
 				top: 70px;
 				background:rgb(216, 25, 25);
 			}
 			#tree {
 				position: fixed;
-				top: 115px;
-				left: 60px;
+				top: 200px;
+				left: 150px;
 			}
 			#asd {
 				position: fixed;
-				top: 250px;
-				left: 100px;
+				top: 400px;
+				left: 150px;
 			}
 			#qwer {
 				position: fixed;
@@ -66,18 +96,21 @@
 			div > p {
 				display: inline-block; /* div의 자식 p */
 				position: fixed;
-				height: 20px;
-				width: 15px;
-				background: lightgray;
+				height: 30px;
+				width: 25px;
+				background: black;
 			}
+		
+			
+			
 			@keyframes textColorAnimation {
-			0% { color : yellow; font-size: 50%;}
-			30% { color : blue; font-size: 100%; }
-			100% { color : green; font-size: 10%; }
+			10% { color : red; font-size: 100%;}
+			30% { color : blue; font-size: 150%; }
+			100% { color : green; font-size: 20%; }
 			}
 			span {
 				animation-name: textColorAnimation;
-				animation-duration: 5s;
+				animation-duration: 20s;
 				animation-iteration-count: infinite;
 			}
 		</style>
@@ -89,15 +122,15 @@
 		<h3><span>Merry Christmas</span></h3>
 		<hr>
 		<img id="te" src="media/background.jpg"
-		width="500" height="400"
+		width="600" height="600"
 		alt="카드 테두리">
 		<img id="tree" src="media/christmastree.png"
-		width="300" height="300"
+		width="400" height="400"
 		alt="크리스마스 트리">
-		<img id="asd" src="media/snowman2.png"
-		width="80" height="80"
+		<img id="asd" src="media/장식2.png"
+		width="80" height="50"
 		alt="크리스마스장식">
-		<img id="qwer" src="media/snowman1.png"
+		<img id="qwer" src="media/장식3.png"
 		width="80" height="80"
 		alt="눈사람">
 		<img id="zxc" src="media/snow.png"
@@ -110,43 +143,48 @@
         <div id="hm11">
 				hm11 박제홍
 		</div>
-        <div id="scale">scale(3,1)</div>
-		<div><p style="left:320px; top:130px;  color :rgb(216, 25, 25)">
-			<span>Merry Christmas</span>
+        
 		</p>
 		</div>
 		<div>
-			<p style="left: 202px; top: 120px;  background-color: yellow;">
+			<p style="left: 350px; top: 240px;  background-color: yellow;">
 				<span>M</span>
 			</p>
-			<p style="left: 180px; top: 140px; background-color: beige;">
+			<p style="left: 325px; top: 270px; background-color: beige;">
 				<span>E</span>
 			</p>
-			<p style="left: 200px; top: 160px; background-color: violet;">
+			<p style="left: 275px; top: 330px; background-color: violet;">
 				<span>R</span>
 			</p>
-			<p style="left:220px; top:180px;background-color: whitesmoke;">
+			<p style="left:305px; top:300px;background-color: whitesmoke;">
 				<span>R</span>
 			</p>
-			<p style="left:200px; top:200px;background-color: aqua;">
+			<p style="left:285px; top:350px;background-color: aqua;">
 				<span>Y</span>
 			</p>
-			<p style="left: 180px; top: 220px; background-color: yellow;">
+			<p style="left: 305px; top: 370px; background-color: yellow;">
 				<span>X</span>
 			</p>
-			<p style="left:200px; top:240px; background-color:hotpink;">
+			<p style="left:335px; top:390px; background-color:hotpink;">
 				<span>-</span>
 			</p>
-			<p style="left: 220px; top: 260px;  background-color: azure;">
+			<p style="left: 355px; top: 410px;  background-color: azure;">
 				<span>M</span>
 			</p>
-			<p style="left:240px; top:280px; background-color: rebeccapurple;">
+			<p style="left:375px; top:440px; background-color: rebeccapurple;">
 				<span>A</span>
 			</p>
-			<p style="left:220px; top:300px; background-color: black;">
+			<p style="left:395px; top:450px; background-color: black;">
 				<span>S</span>
 			</p>
 			
+			<img id="santa" src="media/산타할배.png" 
+    width="200" height="200" 
+    alt="산타">
+
+	<img id="rudolf" src="media/snowman1.png" 
+    width="160" height="200"
+    alt="눈사람">
 	</body>
 
 </html>
