--- a/hm11_rpt02/hm11_rpt02.html
+++ b/hm11_rpt02/hm11_rpt02.html
@@ -100,7 +100,7 @@
 					<h2><span>hm11 form</span></h2>
 					<ul>
 						<li>
-							<a href="hm11_circle.html" target="myframe">동호회 모집 안내</a>
+							<a href="hm11_form.html" target="myframe">동호회 모집 안내</a>
 						</li>
 																	
 					</ul>
